[package]
name = "pod-director"
description = "A simple kubernetes utility to make pods in specific namespaces run in specific nodes"
license = "MIT"
repository = "https://github.com/Angelin01/pod-director"
keywords = ["kubernetes", "pods", "nodes"]
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
figment = { version = "0.10.12", features = ["env", "yaml"] }
axum = { version = "0.6.20", default-features = false, features = ["http1", "http2", "json", "tokio"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
figment = { version = "0.10.12", features = ["test"] }
indoc = "2.0.4"
serde_json = "1.0.108"
tower = "0.4.13"
hyper = "0.14.27"
