[package]
name = "pod-director"
description = "A simple kubernetes utility to make pods in specific namespaces run in specific nodes"
license = "MIT"
repository = "https://github.com/Angelin01/pod-director"
keywords = ["kubernetes", "pods", "nodes"]
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.87.1", default-features = false, features = ["admission", "client"] }
k8s-openapi = { version = "0.20.0", features = ["earliest"] }
serde = { version = "1.0.190", features = ["derive"] }
figment = { version = "0.10.12", features = ["env", "yaml"] }
axum = { version = "0.6.20", default-features = false, features = ["json", "tokio", "macros"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "signal"] }
notify = { version = "6.1.1", default-features = false }
notify-debouncer-full = { version = "0.3.1", default-features = false}
anyhow = "1.0.75"
thiserror = "1.0.50"

[dev-dependencies]
figment = { version = "0.10.12", features = ["test"] }
indoc = "2.0.4"
serde_json = "1.0.108"
tower = "0.4.13"
hyper = "0.14.27"

[profile.release]
strip = "debuginfo"
lto = "fat"
