[package]
name = "pod-director"
description = "A simple kubernetes utility to make pods in specific namespaces run in specific nodes"
license = "MIT"
repository = "https://github.com/Angelin01/pod-director"
keywords = ["kubernetes", "pods", "nodes"]
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.88.1", default-features = false, features = ["admission", "client", "runtime", "rustls-tls"] }
k8s-openapi = { version = "0.21.0", features = ["earliest"] }
serde = { version = "1.0.196", features = ["derive"] }
figment = { version = "0.10.14", features = ["env", "yaml"] }
axum = { version = "0.7.4", default-features = false, features = ["json", "tokio", "macros"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "signal"] }
notify = { version = "6.1.1", default-features = false }
notify-debouncer-full = { version = "0.3.1", default-features = false }
json-patch = { version = "1.2.0", default-features = false }
serde_json = "1.0.113"
anyhow = "1.0.79"
thiserror = "1.0.56"
futures = "0.3.30"

[dev-dependencies]
figment = { version = "0.10.14", features = ["test"] }
indoc = "2.0.4"
tower = "0.4.13"
http-body-util = "0.1.0"
hyper = "1.1.0"
tokio-util = "0.7.10"


[profile.release]
strip = "debuginfo"
lto = "fat"
